Replace standard by prettier

--- a/test/frames.html
+++ b/test/frames.html
@@ -11,7 +11,7 @@
   iframe.auto-height {
     height: auto;
   }
-  td[colspan="3"] iframe {
+  td[colspan='3'] iframe {
     width: 100%;
   }
   th {
@@ -66,6 +66,8 @@
   </tr>
   <tr>
     <td>test3.html</td>
-    <td colspan="3"><iframe src="./test3.html" class="auto-height"></iframe></td>
+    <td colspan="3">
+      <iframe src="./test3.html" class="auto-height"></iframe>
+    </td>
   </tr>
 </table>
